--- a/views/layout.html
+++ b/views/layout.html
@@ -8,10 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <title>Python library Project</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:ital,wght@1,300&display=swap');
         body {
-            font-family: Arial;
+            font-family: 'Roboto', sans-serif;
         }
 
         /**
