--- a/views/layout.html
+++ b/views/layout.html
@@ -13,6 +13,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:ital,wght@1,300&display=swap');
         body {
             font-family: 'Roboto', sans-serif;
+            background-color: black;
+            display: flex;
+            justify-content: center;
         }
 
         /**
