--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,9 @@
 <body>
-    <h1>Hood Library</h1>
-    <button onclick="window.location.reload()">Reload</button>
-    <div id="terminal"></div>
+    <div id="main">
+        <h1>Hood Library</h1>
+        <button onclick="window.location.reload()">Reload</button>
+        <div id="terminal"></div>
+    </div>
 
     <script>
         var term = new Terminal({
