--- a/views/layout.html
+++ b/views/layout.html
@@ -14,10 +14,12 @@
         body {
             font-family: 'Roboto', sans-serif;
             background-color: black;
+           
+        }
+        #main{
             display: flex;
             justify-content: center;
         }
-
         /**
         * Default styles for xterm.js
         */
