UI by html design

--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <body>
     <div id="main">
-        <h1>Hood Library</h1>
-        <button onclick="window.location.reload()">Reload</button>
+        <h1>HOOD LIBRARY</h1>
         <div id="terminal"></div>
+        <button onclick="window.location.reload()">Reload</button>
     </div>
 
     <script>
