--- a/views/layout.html
+++ b/views/layout.html
@@ -19,6 +19,8 @@
         #main{
             display: flex;
             justify-content: center;
+            flex-direction: column;
+            margin: 10px;
         }
         /**
         * Default styles for xterm.js
@@ -164,7 +166,7 @@
         button {
             width: 200px;
             height: 40px;
-            background-color: #E84610;
+            background-color: #35c5d2;
             border: 1px solid grey;
             color: white;
             text-transform: uppercase;
