--- a/views/layout.html
+++ b/views/layout.html
@@ -18,8 +18,9 @@
         }
         #main{
             display: flex;
-            justify-content: center;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
             margin: 10px;
         }
         /**
