--- a/views/layout.html
+++ b/views/layout.html
@@ -70,8 +70,8 @@
 
         .xterm .composition-view {
             /* TODO: Composition position got messed up somewhere */
-            background: #000;
-            color: #FFF;
+            color: #000;
+            background: #FFF;
             display: none;
             position: absolute;
             white-space: nowrap;
