Changing style main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,10 @@
     <title>Python library Project</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:ital,wght@1,300&display=swap');
+        html {
+            min-height: 100%;
+            position: relative;
+        }
         body {
             font-family: 'Roboto', sans-serif;
             background-color: black;
