Changing style main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,6 +20,12 @@
             background-color: black;
            
         }
+        #footer{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            background-color: rgba(255, 255, 255, 0.389);
+        }
         #main{
             display: flex;
             flex-direction: column;
