Changing style main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,7 +20,8 @@
             background-color: black;
            
         }
-        #footer{
+        footer{
+            position: fixed;
             display: flex;
             flex-direction: row;
             justify-content: center;
