Changing style main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -18,11 +18,13 @@
         body {
             font-family: 'Roboto', sans-serif;
             background-color: black;
-           
+            margin: 0;
         }
         footer{
-            position: fixed;
             display: flex;
+            position:absolute;
+            width: 100%;
+            bottom: 0;
             flex-direction: row;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.389);
