Changing style main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -21,6 +21,7 @@
             margin: 0;
         }
         footer{
+            color: white;
             display: flex;
             position:absolute;
             width: 100%;
@@ -30,6 +31,7 @@
             background-color: rgba(255, 255, 255, 0.389);
         }
         #main{
+            color: white;
             display: flex;
             flex-direction: column;
             justify-content: center;
