--- a/views/layout.html
+++ b/views/layout.html
@@ -22,6 +22,7 @@
         }
         footer{
             color: white;
+            font-size: 40px;
             display: flex;
             position:absolute;
             width: 100%;
@@ -29,6 +30,9 @@
             flex-direction: row;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.389);
+        }
+        .icons{
+            color: white;
         }
         #main{
             color: white;
