--- a/views/layout.html
+++ b/views/layout.html
@@ -31,7 +31,7 @@
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.389);
         }
-        .icons{
+        .icon{
             color: white;
         }
         #main{
