--- a/views/layout.html
+++ b/views/layout.html
@@ -28,7 +28,7 @@
             width: 100%;
             bottom: 0;
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-evenly;
             background-color: rgba(255, 255, 255, 0.389);
         }
         .icon{
