Change Console Style

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,5 @@
 <body>
     <div id="main">
-        <h1>HOOD LIBRARY</h1>
         <div id="terminal"></div>
         <button onclick="window.location.reload()">Reload</button>
     </div>
@@ -24,7 +23,7 @@
             rows: 24
         });
         term.open(document.getElementById('terminal'));
-        term.writeln('Wellcome');
+        term.writeln('');
         term.writeln('');
 
         var ws = new WebSocket(location.protocol.replace('http', 'ws') + '//' + location.hostname + (location.port ? (
