--- a/views/layout.html
+++ b/views/layout.html
@@ -29,7 +29,7 @@
             bottom: 0;
             flex-direction: row;
             justify-content: space-evenly;
-            background-color: rgba(255, 255, 255, 0.389);
+            background-color: #222428a3;
         }
         .icon{
             color: white;
@@ -120,6 +120,7 @@
         }
 
         .xterm .xterm-screen canvas {
+            background-color: rgba(75, 75, 75, 0.583);
             position: absolute;
             left: 0;
             top: 0;
