--- a/views/layout.html
+++ b/views/layout.html
@@ -21,11 +21,12 @@
             margin: 0;
         }
         footer{
-            color: white;
+            color: rgba(255, 255, 255, 0);
             font-size: 40px;
             display: flex;
             position:absolute;
             width: 100%;
+            height: 50px;
             bottom: 0;
             flex-direction: row;
             justify-content: space-evenly;
