--- a/views/layout.html
+++ b/views/layout.html
@@ -21,8 +21,9 @@
 
     body {
         font-family: 'Roboto', sans-serif;
-        background-color: black;
+        /* background-color: black; */
         margin: 0;
+        background-image: url("/assets/images/books_wallpaper.png");
     }
 
     footer {
@@ -35,8 +36,9 @@
         bottom: 0;
         flex-direction: row;
         justify-content: space-evenly;
-        /* background-color: #ff5a5a; */
-        background-image: url("/assets/images/books_wallpaper.png");
+        border-top: 1px #FFF;
+        background-color: transparent;
+       
     }
 
     .icon {
