--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Python library Project</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:ital,wght@1,300&display=swap');
@@ -23,7 +23,7 @@
         font-family: 'Roboto', sans-serif;
         /* background-color: black; */
         margin: 0;
-        background-image: url("/assets/images/books_wallpaper.png");
+        background-image: url("../assets/images/books_wallpaper.png");
     }
 
     footer {
