--- a/views/layout.html
+++ b/views/layout.html
@@ -23,7 +23,7 @@
         font-family: 'Roboto', sans-serif;
         /* background-color: black; */
         margin: 0;
-        background-image: url("../assets/images/books_wallpaper.png");
+        background-image: url("https://img2.freepng.es/20180222/gfe/kisspng-download-cartoon-books-are-the-ladder-of-people-on-board-5a8f0809bc6949.1545976315193231457717.jpg");
     }
 
     footer {
