Style for heroku

--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Python library Project</title>
-    <link rel="stylesheet" href="https://github.com/jdhernandezS1/CI_PP3_LIBRARY/tree/main/assets/css/style.css">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:ital,wght@1,300&display=swap');
@@ -23,7 +22,7 @@
         font-family: 'Roboto', sans-serif;
         /* background-color: black; */
         margin: 0;
-        background-image: url("https://img2.freepng.es/20180222/gfe/kisspng-download-cartoon-books-are-the-ladder-of-people-on-board-5a8f0809bc6949.1545976315193231457717.jpg");
+        background-image: url("books_wallpaper.png");
     }
 
     footer {
