Background image heroku

--- a/views/layout.html
+++ b/views/layout.html
@@ -17,12 +17,12 @@
         min-height: 100%;
         position: relative;
     }
-
+        
     body {
         font-family: 'Roboto', sans-serif;
         /* background-color: black; */
+        background-image: url("https://images6.alphacoders.com/389/thumb-1920-389877.jpg");
         margin: 0;
-        background-image: url("books_wallpaper.png");
     }
 
     footer {
