Change style of main page heroku

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,12 @@
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
+        <div>
+            <a href="https://ci-pp3-lib.herokuapp.com/" class="icon links" aria-label="go to my herokuapp" target="blank">
+                <ion-icon name="logo-python"></ion-icon>
+            </a>
+        </div>
+        
     </footer>
     <script>
         var term = new Terminal({
