Fixing contrast error

--- a/views/layout.html
+++ b/views/layout.html
@@ -199,12 +199,13 @@
     button {
         width: 200px;
         height: 40px;
-        background-color: #35c5d2;
-        border: 1px solid grey;
+        background-color: #35c5d223;
+        border: 2px solid grey;
         color: white;
         text-transform: uppercase;
         margin: 10px;
         border-radius: 8px;
+        font-size: x-large;
     }
 </style>
 @{body}
