--- a/views/layout.html
+++ b/views/layout.html
@@ -8,6 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
+    <link href="https://github.com/heroku/favicon/raw/master/favicon.iconset/icon_32x32.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+    
     <title>Python library Project</title>
 </head>
 <style>
