--- a/views/layout.html
+++ b/views/layout.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <link href="https://github.com/heroku/favicon/raw/master/favicon.iconset/icon_32x32.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+    <link href="https://thumbs.dreamstime.com/b/beautiful-meticulously-designed-library-icon-perfect-use-designing-developing-websites-printed-materials-presentations-112019830.jpg" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     
     <title>Python library Project</title>
 </head>
